# tauri-soup-rs

./: .gitignore  .gitlab-ci.yml  .gitmodules  Cargo.toml  LICENSE  README.md
soup/: Cargo.toml  Gir.toml
soup-sys/: Cargo.toml  build.rs
soup-sys/src/: lib.rs
soup-sys/tests/: abi.rs  constant.c  layout.c
soup/examples/: http.rs
soup/src/: address.rs  buffer.rs  lib.rs  message.rs  message_body.rs  prelude.rs  uri.rs
soup/src/auto/: address.rs  auth.rs  auth_basic.rs  auth_digest.rs  auth_domain.rs  auth_domain_digest.rs  auth_manager.rs  auth_negotiate.rs  auth_ntlm.rs  buffer.rs  cache.rs  client_context.rs  content_decoder.rs  content_sniffer.rs  cookie.rs  cookie_jar.rs  cookie_jar_db.rs  cookie_jar_text.rs  date.rs  enums.rs  flags.rs  functions.rs  hsts_enforcer.rs  hsts_enforcer_db.rs  hsts_policy.rs  logger.rs  message.rs  message_body.rs  message_headers.rs  mod.rs  multipart.rs  multipart_input_stream.rs  password_manager.rs  proxy_resolver.rs  proxy_resolver_default.rs  proxy_uri_resolver.rs  request.rs  request_data.rs  request_file.rs  request_http.rs  (+12 more)
