[package]
name = "tauri-soup"
version = "0.14.0"
edition = "2018"
license = "MIT"

[lib]
name = "soup"

[dependencies]
tauri-soup-sys = { version = "0.14.1", path="../soup-sys" }
libc = "0.2"
bitflags = "1.2"
glib = "0.14"
glib-sys = "0.14"
gobject-sys = "0.14"
gio = "0.14"
gio-sys	= "0.14"
once_cell = "1.8.0"

[features]
default = ["v2_60"]
dox = []
v2_24 = []
v2_26 = ["v2_24", "tauri-soup-sys/v2_26"]
v2_26_3 = ["v2_26", "tauri-soup-sys/v2_26_3"]
v2_28 = ["v2_26_3", "tauri-soup-sys/v2_28"]
v2_30 = ["v2_28", "tauri-soup-sys/v2_30"]
v2_32 = ["v2_30", "tauri-soup-sys/v2_32"]
v2_34 = ["v2_32", "tauri-soup-sys/v2_34"]
v2_36 = ["v2_34", "tauri-soup-sys/v2_36"]
v2_38 = ["v2_36", "tauri-soup-sys/v2_38"]
v2_40 = ["v2_38", "tauri-soup-sys/v2_40"]
v2_42 = ["v2_40", "tauri-soup-sys/v2_42"]
v2_44 = ["v2_42", "tauri-soup-sys/v2_44"]
v2_46 = ["v2_44", "tauri-soup-sys/v2_46"]
v2_48 = ["v2_46", "tauri-soup-sys/v2_48"]
v2_50 = ["v2_48", "tauri-soup-sys/v2_50"]
v2_52 = ["v2_50", "tauri-soup-sys/v2_52"]
v2_54 = ["v2_52", "tauri-soup-sys/v2_54"]
v2_56 = ["v2_54", "tauri-soup-sys/v2_56"]
v2_58 = ["v2_56", "tauri-soup-sys/v2_58"]
v2_60 = ["v2_58", "tauri-soup-sys/v2_60"]
v2_62 = ["v2_60", "tauri-soup-sys/v2_62"]
